# Chess

./: .gitignore  LICENSE  README.md  TASKS.md  instructions.md
chess_engine/: Cargo.toml
chess_engine/src/: board.rs  dennis_engine.rs  eval.rs  game.rs  lib.rs  main.rs  uci.rs
toml chess_engine/: Cargo.toml
web_thing/: index.html  index.js  style.css
