[package]
name = "chess_engine"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "chess_engine_cli"
path = "src/main.rs"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-time = "1"
